Configuration was edited, fixing versions